<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/keyOneTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keyTwoTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keyThreeTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/keyBackLL"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_outline_backspace" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/keyFourTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyFiveTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keySixTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="6"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/keySevenTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="7"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyEightTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="8"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyNineTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="9"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/keyZeroTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyDotTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="."
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/keyActionLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_action_btn_disable_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/keyActionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Pay"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>