...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_8sdp"
                                android:orientation="horizontal">

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/transStatusCompleted"
                                    style="@style/Widget.MaterialComponents.Chip.Choice"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="@dimen/_8sdp"
                                    android:layout_weight="1"
                                    android:contentDescription="transStatusCompleted"
...
                                    app:chipBackgroundColor="@color/filter_chip_background_color"
                                    app:chipMinHeight="@dimen/_32sdp"
                                    app:chipStrokeColor="@color/viewcolor"
                                    app:chipStrokeWidth="@dimen/_1sdp" />

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/transStatusRefunded"
                                    style="@style/Widget.MaterialComponents.Chip.Choice"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:contentDescription="transStatusRefunded"
                                    android:fontFamily="@font/opensans_semibold"
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_8sdp"
                                android:orientation="horizontal">

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/transStatusPartialRefund"
                                    style="@style/Widget.MaterialComponents.Chip.Choice"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="@dimen/_8sdp"
                                    android:layout_weight="1"
                                    android:contentDescription="transStatusPartialRefund"
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/bg_small_corners">

                                <EditText
                                    android:id="@+id/transAmountStartET"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_35sdp"
                                    android:layout_marginStart="@dimen/_10sdp"
                                    android:layout_weight="1"
                                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                    android:background="@android:color/transparent"
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/bg_small_corners">

                                <EditText
                                    android:id="@+id/transAmountEndET"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_35sdp"
                                    android:layout_marginStart="@dimen/_10sdp"
                                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                    android:background="@android:color/transparent"
                                    android:contentDescription="transAmountEndET"
...
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_small_corners"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/datePickET"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_35sdp"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_square_withoutcolor_corners"
                                android:clickable="true"
...
            android:paddingBottom="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_21sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/applyFilterBtnCV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:paddingTop="@dimen/_10sdp"
            android:contentDescription="applyFilterBtnCV"
            android:gravity="center"
            app:cardBackgroundColor="#00a6a2"
...
