...
                        android:layout_height="wrap_content"
                        android:background="@color/light_gray" />

                </LinearLayout>

                <EditText
                    android:id="@+id/tidET"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
...
                app:boxStrokeColor="@color/primary_green"
                app:errorIconDrawable="@null"
                app:hintTextColor="@color/primary_green"
                app:passwordToggleTint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_43sdp"
                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                    android:digits="@string/password_characters"
                    android:fontFamily="@font/opensans_semibold"
                    android:imeOptions="actionDone"
...
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/error_red"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/button_bg_inactive"
            android:fontFamily="@font/opensans_bold"
            android:contentDescription="tvButton"
...
